fix: ensure buttons are not hidden by notch on ios

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ html {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100svw;
+    height: 100svh;
     background-color: var(--background);
     padding: 0px;
     margin: 0px;
@@ -48,6 +48,7 @@ body {
     font-weight: normal;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 #form fieldset {
